# evalg-backend

./: .gitignore  Dockerfile  Dockerfile-dev  Dockerfile-evalg  Dockerfile-k8s  Dockerfile-k8s-worker  Dockerfile-old-env  Dockerfile-staging  Jenkinsfile  Jenkinsfile-build  Jenkinsfile-build-pkg  Jenkinsfile-dependencies-check  Jenkinsfile-k8s  Jenkinsfile-new-ci  Jenkinsfile-staging  README.md  docker-compose-evalg-dev.yaml  docker-compose-evalg-new.yaml  docker-entrypoint.sh  mypy.ini  pyproject.toml  requirements-test.txt  requirements.txt  setup.py  tox.ini  update-harbor-image.sh  update-harbor-openshift.sh  update-harbor-utv.sh
.github/: CODEOWNERS
.github/workflows/: build_main.yml  pr_check.yml
ballotbox/: __init__.py  default_config.py
docs/: requirements.txt
docs/algorithms/: uio_stv.md
docs/source/: audit.rst  auth.rst  conf.py  config.rst  index.rst
evalg/: __init__.py  authorization.py  authorization_old.py  candidates.py  config.py  default_config.py  default_election_template_config.py  election_templates.py  group.py  logging.py  metadata.py  organization.py  person.py  request_id.py  serializer.py  utils.py  version.py
evalg/api/: __init__.py  health.py  person.py  upload_census_file.py
evalg/authentication/: __init__.py  mock.py  user.py
evalg/authorization/: __init__.py  permissions.py  permissions_config.json
evalg/ballot_serializer/: ballot_serializer.py  ballot_serializer_base.py  base64_nacl.py
evalg/models/: ou.py  (+16 more)
instance/: ballotbox_config.py.example  evalg_config.py.example  evalg_config.py.example.dev  evalg_logrotate.conf  evalg_rsyslog.conf  evalg_template_config.py  evalg_template_config.py.example
tests/: conftest.py  test_authentication.py  test_census_file_parsers.py
utils/: mk_manager.py
(+157 files in other folders)
