[tool.poetry]
name = "evalg"
version = "3.0.55"
description = "An electronic voting application"
authors = ["USIT, University of Oslo"]
license = "GNU AGPL"

[tool.poetry.dependencies]
alembic = "1.4.2"
aniso8601 = "~7.0"
blinker = "1.4"
celery = "4.4.1"
click = "~8"
Flask = "~1.0"
itsdangerous = "2.0.1" # pinned because of no upper bound on flask dependency giving import error
flask-allows = "0.7.1"
flask-cors = "3.0.9"
flask-feide-gatekeeper = {git = "https://bitbucket.usit.uio.no/scm/int/flask-feide-gatekeeper.git", rev = "v0.0.7"}
flask-graphql = "2.0.1"
flask-migrate = "2.5.3"
flask-shell-ipython = "0.4.1"
flask-sqlalchemy = "2.4.1"
graphene = "2.1.8"
graphene-file-upload = "1.2.1"
graphene-sqlalchemy = "2.1.0"
graphql-core = "2.3.2"
graphql-relay = "2.0.1"
graphql-server-core = "1.1.1"
gunicorn = "^20.1"
psycopg2-binary = "2.8.4"
pynacl = "1.3.0"
python = "^3.8 <3.10"
python-json-logger = "~2.0"
pytz = "2019.3"
sap-client = {git = "https://bitbucket.usit.uio.no/scm/int/sap-client.git", rev = "v2.0.3"}
sentry-sdk = "^0.14.2"
setuptools = "46.1.3"
sqlalchemy = "1.3.15"
sqlalchemy-continuum = "1.3.9"
sqlalchemy-json = "0.4.0"
sqlalchemy-utils = "0.36.3"
werkzeug = "~1.0"


[tool.poetry.dev-dependencies]
Faker = "*"
black = "*"
coverage = "*"
flask-fixtures = "*"
ipython = "*"
mypy = "*"
pylint = "*"
pytest = "*"
pytest-coverage = "*"
pytest-flask = "*"
pytest-pythonpath = "*"
pytest-watch = "*"
pytest-xdist = "*"
rope = "*"
types-setuptools = "^57.4.7"
types-pytz = "^2021.3.4"
types-requests = "^2.27.7"
pytest-flask-sqlalchemy = "^1.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
